--- a/src/themes/hugo-newsletter-2018/layouts/index.html
+++ b/src/themes/hugo-newsletter-2018/layouts/index.html
@@ -11,7 +11,7 @@
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
 <div id="mc_embed_signup">
-<form action="https://HugoNewsletter.us17.list-manage.com/subscribe/post?u=1be41f775d86893c2e6ef2bbc&amp;id=b9317da7b6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+<form action="https://HugoNewsletter.us17.list-manage.com/subscribe/post?u=1be41f775d86893c2e6ef2bbc&amp;id=b9317da7b6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	
 <div class="mc-field-group">
