--- a/src/themes/hugo-newsletter-2018/layouts/partials/mailchimp/philly.html
+++ b/src/themes/hugo-newsletter-2018/layouts/partials/mailchimp/philly.html
@@ -6,7 +6,7 @@
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
 <div id="mc_embed_signup">
-<form action="https://NightOfAcrylics.us16.list-manage.com/subscribe/post?u=146e75a1066df1e45e94aa5be&amp;id=2746dc535d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="https://HugoNewsletter.us17.list-manage.com/subscribe/post?u=1be41f775d86893c2e6ef2bbc&amp;id=b9317da7b6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	
 <div class="mc-field-group">
