--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,5 @@
 {{ define "main" }}
-<img class="logo" src="/assets/img/logo.svg" alt="Hugo Newsletter Logo" />
-
-	<!-- Content file [_index.md] -->
+	<img class="col-4 img-fluid" src="/assets/img/logo.svg" alt="Hugo Newsletter Logo" />
 	<h1>{{ .Title }}</h1>
-	
 	{{ .Content }}
-
 {{ end }}
