--- a/layouts/newsletter/single.html
+++ b/layouts/newsletter/single.html
@@ -1,9 +1,60 @@
 {{ define "main" }}
+{{ $dataJ := getJSON "content/" .File.Dir "data.json" }}
+
+<img src="/assets/img/banner-1280x640.svg.png" style="width:100%;height:auto;"/>
+
 <main class="single">
 	<h1>{{ .Title }}</h1>
-	<div class="content">
-		{{ .Content }}
-		{{ partial "mailchimp/default" . }}
-	</div>
+	<div class="content">{{ .Content }}</div>
 </main>
+
+<h1>Hugo Releases</h1>
+
+<small>A list of recent releases with links to release notes and the github collection of issues/pull requests for this release.</small>
+
+<ul>
+	{{ range $dataJ.releases }}
+		<li><a href="{{ .link }}">{{ .title }}</a> by <a href="{{.author.link}}">{{.author.name}}</a></li>
+	{{ end }}
+</ul>
+
+<h1>How-Tos </h1>
+
+<small>A link list of articles about Hugo, How to's, guides, and so one.</small>
+
+<ul>
+	{{ range $dataJ.links }}
+		<li><a href="{{ .link }}">{{ .title }}</a> by <a href="{{.author.link}}">{{.author.name}}</a></li>
+	{{ end }}
+</ul>
+
+<h1>New Hugo Websites</h1>
+
+<small>A list of websites created with Hugo. Feel free to submit yours.</small>
+
+<ul>
+	{{ range $dataJ.websites }}
+		<li><a href="{{ .link }}">{{ .title }}</a> by <a href="{{.author.link}}">{{.author.name}}</a></li>
+	{{ end }}
+</ul>
+
+<h1>Cat pic</h1>
+
+<p>{{ $.Page.Params.catimageintro }}</p>
+
+<figure>
+<img src="cat-picture.jpg" alt="{{ $.Page.Params.catimageintro }}" style="width:100%;height:auto;" />
+<figcaption><a href="{{ $.Page.Params.catimagelink }}">{{ $.Page.Params.catimagetitle }}</a></figcaption>
+</figure>
+
+<h1>How did I drive?</h1>
+
+Contributor<del>s</del> to this newsletter: [@davidsneighbour](https://github.com/davidsneighbour)
+
+You are aware, that you can participate in creating this monthly newsletter? Good. [Check out our Github repository](https://github.com/davidsneighbour/hugonewsletter.com). Each months issue ([for example this current one](https://github.com/davidsneighbour/hugonewsletter.com/tree/master/content/2019/10)) has several data files where you can add links and information for our lists. It's as easy as opening either an issue or a pull request. If you want to add full articles or sections then feel free to open pull requests on that months `index.md`. Let us know about bugs, display problems, your millenial angst via [issues](https://github.com/davidsneighbour/hugonewsletter.com/issues). What could possibly go wrong? This newsletter is open for everyone. Just do it. 
+
+<div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/b7f0X8Okk1uyk" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+
+You will be linked if you contribute ;) Deal?
+
 {{ end }}
