conten: update content for October 2019 newsletter

--- a/layouts/newsletter/single.html
+++ b/layouts/newsletter/single.html
@@ -22,7 +22,7 @@
 <p>{{ . | safeHTML }}</p>
 {{ end }}
 
-<h1>How-Tos </h1>
+<h1>How-Tos and Tipps&amp;Tricks</h1>
 
 <small>A link list of articles about Hugo, How to's, guides, and so one.</small>
 
