fix: rework homepage
closes #35

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
-	<img class="col-4 img-fluid" src="/assets/img/logo.svg" alt="Hugo Newsletter Logo" />
-	<h1>{{ .Title }}</h1>
+	<div class="row justify-content-md-center">
+		<img class="col-4 img-fluid" src="/assets/img/logo.svg" alt="Hugo Newsletter Logo" />
+	</div>
+	<h1 class="display-4">{{ .Title }}</h1>
 	{{ .Content }}
 {{ end }}
