--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -22,7 +22,7 @@
 //@import "bootstrap/scss/dropdown";
 //@import "bootstrap/scss/button-group";
 //@import "bootstrap/scss/input-group";
-//@import "bootstrap/scss/custom-forms";
+@import "bootstrap/scss/custom-forms";
 @import "bootstrap/scss/nav";
 @import "bootstrap/scss/navbar";
 @import "bootstrap/scss/card";
@@ -30,7 +30,7 @@
 @import "bootstrap/scss/pagination";
 //@import "bootstrap/scss/badge";
 //@import "bootstrap/scss/jumbotron";
-//@import "bootstrap/scss/alert";
+@import "bootstrap/scss/alert";
 @import "bootstrap/scss/progress";
 @import "bootstrap/scss/media";
 @import "bootstrap/scss/list-group";
