--- a/layouts/shortcodes/mailchimp.html
+++ b/layouts/shortcodes/mailchimp.html
@@ -1,49 +1,61 @@
-<form action="https://gmail.us4.list-manage.com/subscribe/post?u=d6f938e236a25dff84c3a6987&amp;id=33bc98c983" 
-		method="post" 
-		target="_blank"
-		class="mb-5">
+<div class="card mb-3">
 
-	<div class="row">
+    <h5 class="card-header">
+        Subscribe now!
+    </h5>
 
-		<div class="form-group col-md-6">
-			<label for="mce-EMAIL">Email address <sup>required</sup></label>
-			<input type="email" class="form-control" 
-					name="EMAIL" id="mce-EMAIL">
-		</div>
+    <div class="card-body">
 
-		<div class="form-group col-md-6">
-			<label for="mce-FNAME">First Name <sup>not required, what do you want us to call you?</sup></label>
-			<input type="text" class="form-control"
-					name="FNAME" id="mce-FNAME">
-		</div>
-	</div>
+        <form action="https://gmail.us4.list-manage.com/subscribe/post?u=d6f938e236a25dff84c3a6987&amp;id=33bc98c983" 
+                method="post" 
+                target="_blank"
+                class="mb-3">
 
-	<div class="alert alert-info mt-3 mb-3" role="alert">
-	    <div class="content__gdpr">
-	        <label><h4>Marketing Permissions</h4></label>
-	        <p>They made us write this ;)</p>
-	        <p>Please select all the ways you would like to hear from Hugo Newsletter:</p>
+            <div class="row">
 
-			<div class="custom-control custom-checkbox">
-				<input type="checkbox" class="custom-control-input" value="Y" 
-					name="gdpr[13209]" id="gdpr_13209">
-				<label class="custom-control-label" for="gdpr_13209">Email</label>
-			</div>
+                <div class="form-group col-md-6">
+                    <label for="mce-EMAIL">Email address <sup>required</sup></label>
+                    <input type="email" class="form-control" 
+                            name="EMAIL" id="mce-EMAIL">
+                </div>
 
-	        <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
-	    </div>
-	    <div class="content__gdprLegal">
-	        <p>
-	        	We use Mailchimp as our newsletter platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. 
-	        	<a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a>
-	        </p>
-	    </div>
-	</div>
+                <div class="form-group col-md-6">
+                    <label for="mce-FNAME">First Name <sup>what do you want us to call you?</sup></label>
+                    <input type="text" class="form-control"
+                            name="FNAME" id="mce-FNAME">
+                </div>
 
-	<div style="position: absolute; left: -5000px;" aria-hidden="true">
-    	<input type="text" name="b_d6f938e236a25dff84c3a6987_33bc98c983" tabindex="-1" value="">
+            </div>
+
+            <div class="alert alert-info mb-3" role="alert">
+
+                <label><h4>Marketing Permissions</h4></label>
+                <p>They made us write this, GDPR and stuff like this ;)</p>
+                <p>Please select all the ways you would like to hear from Hugo Newsletter:</p>
+
+                <div class="custom-control custom-checkbox mb-3">
+                    <input type="checkbox" class="custom-control-input" value="Y" 
+                        name="gdpr[13209]" id="gdpr_13209">
+                    <label class="custom-control-label" for="gdpr_13209">Email <sub>(required to receive the newsletter... obviously...)</sub></label>
+                </div>
+
+                <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
+
+                <p>
+                    We use Mailchimp as our newsletter platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. 
+                    <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a>
+                </p>
+
+            </div>
+
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_d6f938e236a25dff84c3a6987_33bc98c983" tabindex="-1" value="">
+            </div>
+
+            <input type="submit" value="Subscribe" name="subscribe" class="btn btn-primary btn-lg btn-block">
+
+        </form>
+
     </div>
 
-    <input type="submit" value="Subscribe" name="subscribe" class="btn btn-primary btn-lg btn-block">
-
-</form>
+</div>
