fix(template): show subject line smaller in newsletter archive

--- a/layouts/newsletter/single.html
+++ b/layouts/newsletter/single.html
@@ -4,7 +4,7 @@
 <img src="/assets/img/banner-1280x640.svg.png" style="width:100%;height:auto;"/>
 
 <main class="single">
-	<h1>{{ .Title }}</h1>
+	<p><strong>Subject:</strong> {{ .Title }}</p>
 	<div class="content">{{ .Content }}</div>
 </main>
 
