--- a/layouts/partials/newsletter/contributors.html
+++ b/layouts/partials/newsletter/contributors.html
@@ -1,11 +1,25 @@
-<strong>Contributors to this newsletter:</strong>
-<ul>
-    {{- range .contributors }}
+<section id="contributors">
+  <h4>Contributors to this newsletter:</h4>
+  <ul>
+    {{- range .contributors -}}
     <li>
-        {{ .name }}&nbsp;
-        {{ with .web }}<a href="{{ . }}" class="icon">{{- partialCached "svg/home.svg" . -}}</a>&nbsp;{{ end }}
-        {{ with .github }}<a href="{{ . }}" class="icon">{{- partialCached "svg/github.svg" . -}}</a>&nbsp;{{ end }}
-        {{ with .gitlab }}<a href="{{ . }}" class="icon">{{- partialCached "svg/gitlab.svg" . -}}</a>&nbsp;{{ end }}
+      {{ .name }}&nbsp;
+      {{ with .web }}
+      <span class="badge badge-light">
+        <a href="{{ . }}">WEB</a>
+      </span>
+      {{ end }}
+      {{ with .github }}
+      <span class="badge badge-light">
+        <a href="{{ . }}">GITHUB</a>&nbsp;
+      </span>
+      {{ end }}
+      {{ with .gitlab }}
+      <span class="badge badge-light">
+        <a href="{{ . }}">GITLAB</a>&nbsp;
+      </span>
+      {{ end }}
     </li>
-    {{ end -}}
-</ul>
+    {{- end -}}
+  </ul>
+</section>
