--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,5 @@
 <header class="sticky-top navigation">
   <div class="container">
-    <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <h1>
         <a class="navbar-brand" href="{{ .Site.BaseURL | relLangURL }}">
@@ -15,7 +14,6 @@
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation">
         <i class="ti-align-right h4 text-dark"></i>
       </button>
-
       <div class="collapse navbar-collapse text-center" id="navigation">
         <ul class="navbar-nav mx-auto align-items-center">
           <li class="nav-item">
@@ -40,45 +38,38 @@
           {{ end }}
           {{ end }}
         </ul>
-
-        <!-- for mobile -->
         <div class="d-lg-none d-block">
           {{ if .Site.Params.navigation_button_bordered.enable }}
-          {{ "<!-- get start btn -->" | safeHTML }}
-          <a href="{{ .Site.Params.navigation_button_bordered.link | absURL }}"
-            class="btn btn-sm btn-outline-primary ml-lg-4">{{ .Site.Params.navigation_button_bordered.label }}</a>
+            <a href="{{ .Site.Params.navigation_button_bordered.link | absURL }}"
+              class="btn btn-sm btn-outline-primary ml-lg-4">
+              {{ .Site.Params.navigation_button_bordered.label }}
+            </a>
           {{ end }}
-
           {{ if .Site.Params.navigation_button_solid.enable }}
-          {{ "<!-- get start btn -->" | safeHTML }}
-          <a href="{{ .Site.Params.navigation_button_solid.link | absURL }}"
-            class="btn btn-sm btn-primary ml-lg-4">{{ .Site.Params.navigation_button_solid.label }}</a>
+            <a href="{{ .Site.Params.navigation_button_solid.link | absURL }}"
+              class="btn btn-sm btn-primary ml-lg-4">
+              {{ .Site.Params.navigation_button_solid.label }}
+            </a>
           {{ end }}
         </div>
-        <!-- /for mobile -->
       </div>
-
       <div class="form-inline search-wrapper my-3">
         <input id="search-by" type="search" class="form-control" placeholder="{{ i18n `search_placeholder`}}"><i class="ti-search"></i>
       </div>
-
-      <!-- for desktop -->
       <div class="d-lg-flex d-none">
         {{ if .Site.Params.navigation_button_bordered.enable }}
-        {{ "<!-- get start btn -->" | safeHTML }}
-        <a href="{{ .Site.Params.navigation_button_bordered.link | absURL }}"
-          class="btn btn-sm btn-outline-primary ml-lg-4">{{ .Site.Params.navigation_button_bordered.label }}</a>
+          <a href="{{ .Site.Params.navigation_button_bordered.link | absURL }}"
+            class="btn btn-sm btn-outline-primary ml-lg-4">
+            {{ .Site.Params.navigation_button_bordered.label }}
+          </a>
         {{ end }}
-
         {{ if .Site.Params.navigation_button_solid.enable }}
-        {{ "<!-- get start btn -->" | safeHTML }}
-        <a href="{{ .Site.Params.navigation_button_solid.link | absURL }}"
-          class="btn btn-sm btn-primary ml-lg-4">{{ .Site.Params.navigation_button_solid.label }}</a>
+          <a href="{{ .Site.Params.navigation_button_solid.link | absURL }}"
+            class="btn btn-sm btn-primary ml-lg-4">
+            {{ .Site.Params.navigation_button_solid.label }}
+          </a>
         {{ end }}
       </div>
-      <!-- /for desktop -->
-
     </nav>
-
   </div>
 </header>
