fix: stylelint scss files

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,13 +1,13 @@
 // Color Variables
-$primary-color: #FF4088;
-$text-color: #333;
-$text-color-dark: #222;
-$text-color-light: #999;
-$body-color: #fff;
-$border-color: #E2E2E2;
-$black: #000;
-$white: #fff;
-$light: #FBFBFB;
+$primary-color: #ff4088;
+$text-color: #333333;
+$text-color-dark: #222222;
+$text-color-light: #999999;
+$body-color: #ffffff;
+$border-color: #e2e2e2;
+$black: #000000;
+$white: #ffffff;
+$light: #fbfbfb;
 
 // Font Variables
 $primary-font: 'Montserrat', sans-serif;
