--- a/layouts/newsletter/single.html
+++ b/layouts/newsletter/single.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 
 <section>
-    <div class="container">
+    <div class="container-lg">
         <div class="row">
             <div class="col-lg-3 col-md-4 d-none d-md-block">
-                <ul class="sidenav pt-4 pr-4 border-right border-default">
+                <ul class="sidenav pt-4 pr-4 border-end border-default">
                     {{ $currentNode := . }}
                     {{range .Site.Home.Sections.ByWeight}}
                     <!-- not render any single page, like contact page. -->
