--- a/layouts/partials/contact/list.html
+++ b/layouts/partials/contact/list.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 
 <section class="section">
-  <div class="container">
+  <div class="container-lg">
     <div class="row justify-content-center">
       <div class="col-lg-8">
-        <div class="p-5 shadow rounded content">
+        <div class="p-5 shadow content">
           <h2 class="section-title">{{ .Title }}</h2>
           <form method="POST" action="{{ .Site.Params.contact_form_action }}">
             <div class="form-row">
