--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,54 +1,41 @@
-<footer>
-  <div class="container">
-    <div class="row align-items-center border-bottom py-5">
-      <div class="col-lg-4">
-        <ul class="list-inline footer-menu text-center text-lg-left">
-          {{ range .Site.Menus.footer }}
-          <li class="list-inline-item"><a href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
-          {{ end }}
-        </ul>
-      </div>
-      <div class="col-lg-4 text-center mb-4 mb-lg-0">
-        <a class="navbar-brand" href="{{ .Site.BaseURL | relLangURL }}">
-          {{ if .Site.Params.logo }}
+<footer class="container-lg">
+  <div class="row align-items-center border-bottom py-5">
+    <div class="col-lg-4">
+      <ul class="list-inline footer-menu text-center text-lg-start">
+        {{ range .Site.Menus.footer }}
+        <li class="list-inline-item"><a href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
+        {{ end }}
+      </ul>
+    </div>
+    <div class="col-lg-4 text-center mb-4 mb-lg-0">
+      <a class="navbar-brand" href="{{ .Site.BaseURL | relLangURL }}">
+        {{ if .Site.Params.logo }}
           <img class="img-fluid" src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}">
-          {{ else }}
+        {{ else }}
           {{ .Site.Title }}
-          {{ end }}</a>
-      </div>
-      <div class="col-lg-4">
-        <ul class="list-inline social-icons text-lg-right text-center">
-          {{ range .Site.Params.social }}
-          <li class="list-inline-item"><a href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a></li>
-          {{ end }}
-        </ul>
-      </div>
+        {{ end }}
+      </a>
     </div>
-    <div class="py-4 text-center">
-      <small class="text-light">{{ .Site.Params.copyright | markdownify }}</small>
+    <div class="col-lg-4">
+      <ul class="list-inline social-icons text-lg-end text-center">
+        <li class="list-inline-item">
+          <a href="https://twitter.com/hugonewsletter">
+            {{ partialCached "bsicon" "twitter" "twitter" }}
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://github.com/dnb-hugo/hugonewsletter.com/">
+            {{ partialCached "bsicon" "github" "github" }}
+          </a>
+        </li>
+      </ul>
     </div>
+  </div>
+  <div class="py-4 text-center">
+    <small class="text-light">{{ .Site.Params.copyright | markdownify }}</small>
   </div>
 </footer>
 
-<script type="text/javascript">
-  var indexURL = {{ "index.json" | absLangURL }};
-  {{ if .Site.IsMultiLingual }}
-  var baseurl = "{{.Site.BaseURL}}{{.Site.LanguagePrefix}}";
-  {{ else }}
-  var baseurl = "{{.Site.BaseURL}}";
-  {{ end }}
-</script>
-
-{{ "<!-- JS Plugins -->" | safeHTML }}
-{{ range .Site.Params.plugins.js}}
-<script src="{{ .link | absURL }}"></script>
-{{ end }}
-
-{{ "<!-- Main Script -->" | safeHTML }}
-{{ $script := resources.Get "js/script.js" | minify }}
-<script src="{{ $script.Permalink }}"></script>
-
-{{ "<!-- google analitycs -->" | safeHTML }}
 {{ with .Site.Params.google_analitycs_id}}
 <script>
   (function (i, s, o, g, r, a, m) {
@@ -66,3 +53,5 @@
   ga('send', 'pageview');
 </script>
 {{ end }}
+
+
