--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,75 +1,7 @@
-<header class="sticky-top navigation">
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-      <h1>
-        <a class="navbar-brand" href="{{ .Site.BaseURL | relLangURL }}">
-          {{ if .Site.Params.logo }}
-            <img class="img-fluid" src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}">
-            {{ .Site.Title }}
-          {{ else }}
-            {{ .Site.Title }}
-          {{ end }}
-        </a>
-      </h1>
-      <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation">
-        <i class="ti-align-right h4 text-dark"></i>
-      </button>
-      <div class="collapse navbar-collapse text-center" id="navigation">
-        <ul class="navbar-nav mx-auto align-items-center">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Params.Home }}</a>
-          </li>
-          {{ range .Site.Menus.main }}
-          {{ if .HasChildren }}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">
-              {{ .Name }}
-            </a>
-            <div class="dropdown-menu">
-              {{ range .Children }}
-              <a class="dropdown-item" href="{{ .URL | absURL }}">{{ .Name }}</a>
-              {{ end }}
-            </div>
-          </li>
-          {{ else }}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ .URL | absURL }}">{{ .Name }}</a>
-          </li>
-          {{ end }}
-          {{ end }}
-        </ul>
-        <div class="d-lg-none d-block">
-          {{ if .Site.Params.navigation_button_bordered.enable }}
-            <a href="{{ .Site.Params.navigation_button_bordered.link | absURL }}"
-              class="btn btn-sm btn-outline-primary ml-lg-4">
-              {{ .Site.Params.navigation_button_bordered.label }}
-            </a>
-          {{ end }}
-          {{ if .Site.Params.navigation_button_solid.enable }}
-            <a href="{{ .Site.Params.navigation_button_solid.link | absURL }}"
-              class="btn btn-sm btn-primary ml-lg-4">
-              {{ .Site.Params.navigation_button_solid.label }}
-            </a>
-          {{ end }}
-        </div>
-      </div>
-      <div class="form-inline search-wrapper my-3">
-        <input id="search-by" type="search" class="form-control" placeholder="{{ i18n `search_placeholder`}}"><i class="ti-search"></i>
-      </div>
-      <div class="d-lg-flex d-none">
-        {{ if .Site.Params.navigation_button_bordered.enable }}
-          <a href="{{ .Site.Params.navigation_button_bordered.link | absURL }}"
-            class="btn btn-sm btn-outline-primary ml-lg-4">
-            {{ .Site.Params.navigation_button_bordered.label }}
-          </a>
-        {{ end }}
-        {{ if .Site.Params.navigation_button_solid.enable }}
-          <a href="{{ .Site.Params.navigation_button_solid.link | absURL }}"
-            class="btn btn-sm btn-primary ml-lg-4">
-            {{ .Site.Params.navigation_button_solid.label }}
-          </a>
-        {{ end }}
-      </div>
-    </nav>
+<header class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
+  <div class="container-lg">
+    {{ partialCached "header/brand" . }}
+    {{ partial "header/navigation" . }}
+    {{/*    {{ partialCached "header/search" . }}*/}}
   </div>
 </header>
