--- a/layouts/partials/stylesheets.html
+++ b/layouts/partials/stylesheets.html
@@ -4,4 +4,4 @@
 {{ $cssOpts      := (dict "targetPath" $cssTarget "enableSourceMap" true "includePaths" $sassIncludes "outputStyle" "compressed") }}
 
 {{ $css := $sass | toCSS $cssOpts | resources.PostCSS | fingerprint }}
-<link rel="stylesheet" href="{{ $css.Permalink | absURL }}" integrity="{{ $css.Data.Integrity }}">
+<link rel="stylesheet" href="{{ $css.Permalink | absURL }}" integrity="{{ $css.Data.Integrity | html }}">
