--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
-  <div class="container-lg">
+  <div class="site-header">
     {{ partialCached "header/brand" . }}
     {{ partial "header/navigation" . }}
     {{/*    {{ partialCached "header/search" . }}*/}}
