--- a/layouts/partials/contact/list.html
+++ b/layouts/partials/contact/list.html
@@ -1,7 +1,6 @@
 {{ define "main" }}
 
-<section class="section">
-  <div class="container-lg">
+<section>
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="p-5 shadow content">
@@ -39,7 +38,6 @@
         </div>
       </div>
     </div>
-  </div>
 </section>
 
 {{ end }}
