--- a/layouts/partials/default.html
+++ b/layouts/partials/default.html
@@ -1,45 +1,49 @@
-  <div class="container-lg">
-    <div class="row">
-      <div class="col-lg-3 col-md-4 d-none d-md-block">
-        <ul class="sidenav pt-4 pr-4 border-end border-default">
-          {{ $currentNode := . }}
-          {{range .Site.Home.Sections.ByWeight}}
+<section>
+  <main class="row">
+    <aside class="col-lg-3 col-md-4 d-none d-md-block">
+      <ul class="sidenav pt-4 pr-4 border-end border-default">
+        {{ $currentNode := . }}
+        {{range .Site.Home.Sections.ByWeight}}
           <!-- not render any single page, like contact page. -->
           {{ $numberOfMainPages := len .Pages }}
           {{ if eq $numberOfMainPages 0 }}
           {{ else }}
-          <!-- /not render any single page, like contact page. -->
-          {{ template "section-tree-nav" dict "sect" . "currentnode" $currentNode}}
+            <!-- /not render any single page, like contact page. -->
+            {{ template "section-tree-nav" dict "sect" . "currentnode" $currentNode}}
           {{ end }}
-          {{ end }}
-        </ul>
-      </div>
-      <div class="col-lg-9 col-md-8">
+        {{ end }}
+      </ul>
+    </aside>
+    <article class="col-lg-9 col-md-8">
 
-          <h2 class="mb-4 font-weight-medium">{{ .Title | safeHTML }}</h2>
-          {{ if .Content }}
-          <div class="content">{{.Content}}</div>
-          {{ else }}
-          <div class="page-list">
-            {{ template "section-tree-nav" dict "sect" . "currentnode" $currentNode }}
-          </div>
-          {{ end }}
+      <header>
+        <h2>{{ .Title | safeHTML }}</h2>
+        <p>Last Modified: {{ .Lastmod.Format "January 2, 2006" }} <a href="#is--github-info">{{ partialCached "bsicon" "info-circle" "info-circle" }}</a></p>
+      </header>
 
-          <nav class="pagination">
-            <!-- Next prev page -->
-            {{ $currentNode := . }}
-            {{ template "menu-nextprev" dict "menu" .Site.Home "currentnode" $currentNode }}
-            {{ define "menu-nextprev" }}
-            {{$currentNode := .currentnode }}
-            {{ if ne .menu.Params.hidden true}}
+      {{ if .Content }}
+        <div class="content">{{.Content}}</div>
+      {{ else }}
+        <div class="page-list">
+          {{ template "section-tree-nav" dict "sect" . "currentnode" $currentNode }}
+        </div>
+      {{ end }}
+
+      <nav class="pagination">
+        <!-- Next prev page -->
+        {{ $currentNode := . }}
+        {{ template "menu-nextprev" dict "menu" .Site.Home "currentnode" $currentNode }}
+        {{ define "menu-nextprev" }}
+          {{$currentNode := .currentnode }}
+          {{ if ne .menu.Params.hidden true}}
             {{if hasPrefix $currentNode.Permalink .menu.Permalink }}
-            {{ $currentNode.Scratch.Set "NextPageOK" "OK" }}
-            {{ $currentNode.Scratch.Set "prevPage" ($currentNode.Scratch.Get "prevPageTmp") }}
+              {{ $currentNode.Scratch.Set "NextPageOK" "OK" }}
+              {{ $currentNode.Scratch.Set "prevPage" ($currentNode.Scratch.Get "prevPageTmp") }}
             {{else}}
-            {{if eq ($currentNode.Scratch.Get "NextPageOK") "OK"}}
-            {{ $currentNode.Scratch.Set "NextPageOK" nil }}
-            {{ $currentNode.Scratch.Set "nextPage" .menu }}
-            {{end}}
+              {{if eq ($currentNode.Scratch.Get "NextPageOK") "OK"}}
+                {{ $currentNode.Scratch.Set "NextPageOK" nil }}
+                {{ $currentNode.Scratch.Set "nextPage" .menu }}
+              {{end}}
             {{end}}
             {{ $currentNode.Scratch.Set "prevPageTmp" .menu }}
 
@@ -47,61 +51,64 @@
             {{ $pages := ($currentNode.Scratch.Get "pages") }}
 
             {{ range $pages.ByWeight  }}
-            {{ template "menu-nextprev" dict "menu" . "currentnode" $currentNode }}
+              {{ template "menu-nextprev" dict "menu" . "currentnode" $currentNode }}
             {{end}}
-            {{ end }}
-            {{ end }}
+          {{ end }}
+        {{ end }}
 
-            {{with ($.Scratch.Get "prevPage")}}
-              <a class="nav nav-prev" href="{{.Permalink }}">
-                <i class="ti-arrow-left mr-2"></i>
-                <span class="d-none d-md-block">
+        {{with ($.Scratch.Get "prevPage")}}
+          <a class="nav nav-prev" href="{{.Permalink }}">
+            <i class="ti-arrow-left mr-2"></i>
+            <span class="d-none d-md-block">
                   {{ with .LinkTitle }}{{ . | markdownify }}{{ else }}{{ . | markdownify }}{{ end}}
                 </span>
-              </a>
-            {{end}}
-            {{with ($.Scratch.Get "nextPage")}}
-              <a class="nav nav-next" href="{{.Permalink }}">
+          </a>
+        {{end}}
+        {{with ($.Scratch.Get "nextPage")}}
+          <a class="nav nav-next" href="{{.Permalink }}">
                 <span class="d-none d-md-block">
                   {{ with .LinkTitle }}{{ . | markdownify }}{{ else }}{{ .Title | markdownify }}{{ end}}
                 </span>
-                <i class="ti-arrow-right ml-2"></i>
-              </a>
-            {{end}}
-          </nav>
-      </div>
-    </div>
-  </div>
+            <i class="ti-arrow-right ml-2"></i>
+          </a>
+        {{end}}
+      </nav>
 
+      {{ partial "living-documentation" . }}
+
+    </article>
+  </main>
+</section>
 
 {{ define "section-tree-nav" }}
-{{ $showvisitedlinks := .showvisitedlinks }}
-{{ $currentNode := .currentnode }}
-{{with .sect}}
-{{safeHTML .Params.head}}
-{{ $fileUniqueID := "" }}
-{{ with .File }}{{ $fileUniqueID = .UniqueID }}{{ end }}
-{{ $currentNodeFileUniqueID := "" }}
-{{ with $currentNode.File }}{{ $currentNodeFileUniqueID = .UniqueID }}{{ end }}
-<li data-nav-id="{{.Permalink}}" title="{{.Title}}"
-  class="sidelist {{if .IsAncestor $currentNode }}parent{{end}} {{if eq $fileUniqueID $currentNodeFileUniqueID}}active{{end}}">
-  <a href="{{.Permalink}}">
-    {{ with .LinkTitle }}{{ . | markdownify }}{{ else }}{{ .Title | markdownify }}{{ end}}
-  </a>
-  {{ $numberOfPages := (add (len .Pages) (len .Sections)) }}
-  {{ if ne $numberOfPages 0 }}
-  <ul>
-    {{ $currentNode.Scratch.Set "pages" .Pages }}
-    {{ if .Sections}}
-      {{ $currentNode.Scratch.Set "pages" (.Pages | union .Sections) }}
-    {{end}}
-    {{ $pages := ($currentNode.Scratch.Get "pages") }}
+  {{ $showvisitedlinks := .showvisitedlinks }}
+  {{ $currentNode := .currentnode }}
+  {{with .sect}}
+    {{safeHTML .Params.head}}
+    {{ $fileUniqueID := "" }}
+    {{ with .File }}{{ $fileUniqueID = .UniqueID }}{{ end }}
+    {{ $currentNodeFileUniqueID := "" }}
+    {{ with $currentNode.File }}{{ $currentNodeFileUniqueID = .UniqueID }}{{ end }}
+    <li
+            data-nav-id="{{.Permalink}}" title="{{.Title}}"
+            class="sidelist {{if .IsAncestor $currentNode }}parent{{end}} {{if eq $fileUniqueID $currentNodeFileUniqueID}}active{{end}}">
+    <a href="{{.Permalink}}">
+      {{ with .LinkTitle }}{{ . | markdownify }}{{ else }}{{ .Title | markdownify }}{{ end}}
+    </a>
+    {{ $numberOfPages := (add (len .Pages) (len .Sections)) }}
+    {{ if ne $numberOfPages 0 }}
+      <ul>
+        {{ $currentNode.Scratch.Set "pages" .Pages }}
+        {{ if .Sections}}
+          {{ $currentNode.Scratch.Set "pages" (.Pages | union .Sections) }}
+        {{end}}
+        {{ $pages := ($currentNode.Scratch.Get "pages") }}
 
-    {{ range $pages.ByWeight }}
-      {{ template "section-tree-nav" dict "sect" . "currentnode" $currentNode }}
-    {{end}}
-  </ul>
-</li>
-{{ end }}
-{{ end }}
+        {{ range $pages.ByWeight }}
+          {{ template "section-tree-nav" dict "sect" . "currentnode" $currentNode }}
+        {{end}}
+      </ul>
+      </li>
+    {{ end }}
+  {{ end }}
 {{ end }}
