--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="container-lg">
+<footer class="site-footer">
   <div class="row align-items-center border-bottom py-5">
     <div class="col-lg-4">
       <ul class="list-inline footer-menu text-center text-lg-start">
@@ -32,7 +32,9 @@
     </div>
   </div>
   <div class="py-4 text-center">
-    <small class="text-light">{{ .Site.Params.copyright | markdownify }}</small>
+    <small class="text-dark">
+      &copy; 2021 David's Neighbour
+    </small>
   </div>
 </footer>
 
