theme: fix header positioning

--- a/layouts/partials/header/brand.html
+++ b/layouts/partials/header/brand.html
@@ -1,8 +1,6 @@
 <h1>
   <a href="/">
-    {{ if .Site.Params.logo }}
-      <img class="img-fluid" src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}">
-    {{ end }}
-    {{ .Site.Title }}
+    <img class="img-fluid" src="/images/logos/hugo-logo-wide.svg" alt="{{ .Site.Title }}">
+    Newsletter
   </a>
 </h1>
