--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
-<header class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
-  <div class="site-header">
+<header class="navbar navbar-expand-lg sticky-top navbar-primary bg-light">
+  <div class="site-header justify-content-between">
     {{ partialCached "header/brand" . }}
     {{ partial "header/navigation" . }}
     {{/*    {{ partialCached "header/search" . }}*/}}
