--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -55,3 +55,6 @@
 @import 'scss/sections/content';
 @import 'scss/sections/newsletter';
 @import 'scss/shortcodes/doclink';
+
+// Plugins
+@import 'scss/plugins/highlight';
