--- a/layouts/partials/living-documentation.html
+++ b/layouts/partials/living-documentation.html
@@ -2,15 +2,16 @@
   <h3>Last Changes</h3>
   <p>
     This page is part of a living documentation. It might change depending on gained experience, changes in Hugo or with
-    additional samples and details. Bookmark this page to come back later.
+    additional samples and details. Bookmark this page to come back later. The sample code in this page will always work
+    in the latest Hugo versions.
   </p>
   <p>
     <a href="{{ .Permalink }}">{{ .Title }}</a> was last updated on {{ .Lastmod.Format "January 2, 2006" }}.
   </p>
   <p>
-    <a href="https://github.com/dnb-hugo/hugonewsletter.com/edit/master/content/{{.File.Path}}">
+    <a href="https://github.com/dnb-hugo/hugonewsletter.com/edit/main/content/{{.File.Path}}">
       {{ partialCached "bsicon" "github" "github" }}&nbsp;
-      Improve this page on Github
+      Help to improve this page on Github
     </a>
   </p>
 </div>
