--- a/layouts/shortcodes/doclink.html
+++ b/layouts/shortcodes/doclink.html
@@ -1,7 +1,7 @@
 {{- $url := .Get "url" -}}
 {{- $function := .Get "function" -}}
 <div class="doclink">
-  <a href="{{- $url -}}">
+  <a href="{{- $url -}}" target="_blank">
     Read the official
     <img src="/images/logos/hugo-logo-wide.svg" alt="Hugo Logo" />
     documentation
