theme: fix header classes and SCSS

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,6 @@
-<header class="navbar navbar-expand-lg sticky-top navbar-primary bg-light">
-  <div class="site-header justify-content-between">
+<section id="site-header">
+  <header>
     {{ partialCached "header/brand" . }}
     {{ partial "header/navigation" . }}
-    {{/*    {{ partialCached "header/search" . }}*/}}
-  </div>
-</header>
+  </header>
+</section>
