--- a/layouts/partials/header/brand.html
+++ b/layouts/partials/header/brand.html
@@ -1,6 +1,6 @@
 <h1>
   <a href="/">
-    <img class="img-fluid" src="/images/logos/hugo-logo-wide.svg" alt="{{ .Site.Title }}">
+    <img src="/images/logos/hugo-logo-wide.svg" alt="{{ .Site.Title }}">
     Newsletter
   </a>
 </h1>
