theme: fix container classes

--- a/layouts/partials/newsletter/catpic.html
+++ b/layouts/partials/newsletter/catpic.html
@@ -1,4 +1,4 @@
-<section id="catpic">
+<section id="catpic" class="container-lg">
     <h3>Cat pic</h3>
     <p>{{ $.Page.Params.catimageintro }}</p>
     <figure>
