--- a/layouts/partials/newsletter/contributors.html
+++ b/layouts/partials/newsletter/contributors.html
@@ -1,4 +1,4 @@
-<section id="contributors">
+<section id="contributors" class="container-lg">
   <h4>Contributors to this newsletter:</h4>
   <ul>
     {{- range .contributors -}}
