--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<section>
+<section class="container-lg">
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="p-5 shadow content">
