--- a/layouts/newsletter/single.html
+++ b/layouts/newsletter/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<section>
+<section class="container-lg">
         <div class="row">
             <div class="col-lg-3 col-md-4 d-none d-md-block">
                 <ul class="sidenav pt-4 pr-4 border-end border-default">
