--- a/layouts/partials/default.html
+++ b/layouts/partials/default.html
@@ -1,4 +1,4 @@
-<section>
+<section class="container-lg">
   <main class="row">
     <aside class="col-lg-3 col-md-4 d-none d-md-block">
       <ul class="sidenav pt-4 pr-4 border-end border-default">
