--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,59 +1,58 @@
-<footer class="site-footer">
-  <div class="row align-items-center border-bottom py-5">
-    <div class="col-lg-4">
-      <ul class="list-inline footer-menu text-center text-lg-start">
-        {{ range .Site.Menus.footer }}
-        <li class="list-inline-item"><a href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
-        {{ end }}
-      </ul>
-    </div>
-    <div class="col-lg-4 text-center mb-4 mb-lg-0">
-      <a class="navbar-brand" href="{{ .Site.BaseURL | relLangURL }}">
-        {{ if .Site.Params.logo }}
-          <img class="img-fluid" src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}">
-        {{ else }}
+<section id="site-footer">
+  <footer>
+    <section class="is--footer">
+      <aside>
+        <ul>
+          {{ range .Site.Menus.footer }}
+            <li><a href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
+          {{ end }}
+        </ul>
+      </aside>
+      <aside>
+        <a href="{{ .Site.BaseURL | relLangURL }}">
           {{ .Site.Title }}
-        {{ end }}
+        </a>
+      </aside>
+      <aside>
+        <ul class="social-icons ">
+          <li>
+            <a href="https://twitter.com/hugonewsletter">
+              {{ partialCached "bsicon" "twitter" "twitter" }}
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/dnb-hugo/hugonewsletter.com/">
+              {{ partialCached "bsicon" "github" "github" }}
+            </a>
+          </li>
+        </ul>
+      </aside>
+    </section>
+    <section class="is--copyright">
+      &copy;2021 <a href="https://davids-neighbour.com/">David's Neighbour</a>
+      <a href="{{ .Site.BaseURL | relLangURL }}">
+        <img src="/images/logos/hugo-logo-wide.svg" alt="{{ .Site.Title }}">
       </a>
-    </div>
-    <div class="col-lg-4">
-      <ul class="list-inline social-icons text-lg-end text-center">
-        <li class="list-inline-item">
-          <a href="https://twitter.com/hugonewsletter">
-            {{ partialCached "bsicon" "twitter" "twitter" }}
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a href="https://github.com/dnb-hugo/hugonewsletter.com/">
-            {{ partialCached "bsicon" "github" "github" }}
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="py-4 text-center">
-    <small class="text-dark">
-      &copy; 2021 David's Neighbour
-    </small>
-  </div>
-</footer>
+    </section>
+  </footer>
+</section>
 
 {{ with .Site.Params.google_analitycs_id}}
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', '{{ . }}', 'auto');
-  ga('send', 'pageview');
-</script>
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i["GoogleAnalyticsObject"] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments);
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+              m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m);
+    })(window, document, "script", "//www.google-analytics.com/analytics.js", "ga");
+    ga("create", '{{ . }}', "auto");
+    ga("send", "pageview");
+  </script>
 {{ end }}
 
 
