theme: move theme files around

--- a/layouts/newsletter/single.html
+++ b/layouts/newsletter/single.html
@@ -19,7 +19,7 @@
             <div class="col-md-8">
                 <div class="px-lg-2 px-1 pt-5">
                     <h2 class="mb-4 font-weight-medium">{{ .Title | safeHTML }}</h2>
-                    {{ partial "newsletter.html" . }}
+                    {{ partial "snippets/newsletter.html" . }}
                 </div>
             </div>
         </div>
