--- a/layouts/partials/default.html
+++ b/layouts/partials/default.html
@@ -74,7 +74,7 @@
         {{end}}
       </nav>
 
-      {{ partial "living-documentation" . }}
+      {{ partial "snippets/living-documentation" . }}
 
     </article>
   </main>
