--- a/layouts/shortcodes/mailchimp.html
+++ b/layouts/shortcodes/mailchimp.html
@@ -1,61 +1,57 @@
-<div class="card mb-3">
+<aside id="mailchimp">
+  <header>Subscribe now!</header>
 
-    <h5 class="card-header">
-        Subscribe now!
-    </h5>
+    <form
+            action="https://gmail.us4.list-manage.com/subscribe/post?u=d6f938e236a25dff84c3a6987&amp;id=33bc98c983"
+            method="post"
+            target="_blank">
 
-    <div class="card-body">
+      <fieldset>
+        <div>
+          <label for="mce-EMAIL">Email <sup>required</sup></label>
+          <input type="email" name="EMAIL" id="mce-EMAIL" placeholder="Your email address">
+        </div>
+        <div>
+          <label for="mce-FNAME">Name <sup>what do you want us to call you?</sup></label>
+          <input
+                  type="text"
+                  name="FNAME" id="mce-FNAME" placeholder="Your name">
+        </div>
+      </fieldset>
 
-        <form action="https://gmail.us4.list-manage.com/subscribe/post?u=d6f938e236a25dff84c3a6987&amp;id=33bc98c983"
-                method="post"
-                target="_blank"
-                class="mb-0">
+      <div class="alert">
 
-            <div class="form-row">
+        <label><h4>Marketing Permissions</h4></label>
+        <p>They made us write this, GDPR and stuff like this ;)</p>
+        <p>Please select all the ways you would like to hear from HugoNewsletter.com:</p>
 
-                <div class="form-group col-md-6">
-                    <label for="mce-EMAIL">Email <sup>required</sup></label>
-                    <input type="email" class="form-control"
-                            name="EMAIL" id="mce-EMAIL" placeholder="Your email address">
-                </div>
+        <div id="gdpr_13209">
+          <input type="checkbox" value="Y"
+                 name="gdpr[13209]">
+          <label for="gdpr_13209">
+            Email <sup>(required to receive the newsletter...
+              obviously...)</sup>
+          </label>
+        </div>
 
-                <div class="form-group col-md-6">
-                    <label for="mce-FNAME">Name <sup>what do you want us to call you?</sup></label>
-                    <input type="text" class="form-control"
-                            name="FNAME" id="mce-FNAME" placeholder="Your name">
-                </div>
+        <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our
+          privacy practices, please visit our website.</p>
 
-            </div>
+        <p>
+          We use Mailchimp as our newsletter platform. By clicking below to subscribe, you acknowledge that your
+          information will be transferred to Mailchimp for processing.
+          <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices
+            here.</a>
+        </p>
 
-            <div class="alert alert-info mb-3" role="alert">
+      </div>
 
-                <label><h4>Marketing Permissions</h4></label>
-                <p>They made us write this, GDPR and stuff like this ;)</p>
-                <p>Please select all the ways you would like to hear from HugoNewsletter.com:</p>
+      <div aria-hidden="true">
+        <input type="text" name="b_d6f938e236a25dff84c3a6987_33bc98c983" tabindex="-1" value="">
+      </div>
 
-                <div class="custom-control custom-checkbox mb-3">
-                    <input type="checkbox" class="custom-control-input" value="Y"
-                        name="gdpr[13209]" id="gdpr_13209">
-                    <label class="custom-control-label" for="gdpr_13209">Email <sup>(required to receive the newsletter... obviously...)</sup></label>
-                </div>
+      <input type="submit" value="Subscribe" name="subscribe">
 
-                <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
+    </form>
 
-                <p>
-                    We use Mailchimp as our newsletter platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing.
-                    <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a>
-                </p>
-
-            </div>
-
-            <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                <input type="text" name="b_d6f938e236a25dff84c3a6987_33bc98c983" tabindex="-1" value="">
-            </div>
-
-            <input type="submit" value="Subscribe" name="subscribe" class="btn btn-primary btn-lg btn-block">
-
-        </form>
-
-    </div>
-
-</div>
+</aside>
