theme: move contact form into shortcode/partial construct

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -53,6 +53,7 @@
 @import 'scss/components/50-icons';
 @import 'scss/components/60-footer';
 @import 'scss/sections/content';
+@import 'scss/sections/forms';
 @import 'scss/sections/newsletter';
 
 // Shortcodes
